<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BamboleHiro</string>
    <string name="play_txt">Vamos Jogar!</string>
    <string name="settings_txt">Configurações</string>
    <string name="info_txt">Informações</string>
    <string name="restart_txt">Jogar Novamente</string>
    <string name="score_name">Pontuação</string>
    <string name="ranking_name">Melhor Pontuação</string>
    <string name="congrats">Parabéns</string>

    <!-- BLE items -->
    <string name="title_btn_scan">Scan devices</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_score">ScoreActivity</string>

</resources>
