<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightYellow"
    tools:context=".FullscreenActivity">
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/app_name"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

       <LinearLayout
           android:padding="10dp"

           android:layout_gravity="bottom"
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="350dp">
        <Button
            android:id="@+id/btn_play"
            android:radius="10dp"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:background="@color/colorDarkBlue"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/play_txt" />

        <LinearLayout
            android:padding="10dp"
            android:id="@+id/under"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
           >

            <Button
                android:layout_margin="5dp"
                android:id="@+id/btn_config"
                android:layout_width="0dp"
                android:padding="10dp"
                android:radius="10dp"
                android:background="@color/colorLightPink"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:text="@string/info_txt"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_info"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:radius="10dp"
                android:background="@color/colorLightBlue"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:text="@string/settings_txt"
                tools:ignore="ButtonStyle"/>

        </LinearLayout>
       </LinearLayout>


</FrameLayout>