<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightYellow"
    tools:context=".ScoreActivity">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textAlignment="center"
        android:textColor="@color/colorLightPink"
        android:textSize="60sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="10dp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_name"
            android:textAlignment="center"
            android:textColor="@color/colorDarkBlue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorDarkBlue"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ranking_name"
            android:textAlignment="center"
            android:textColor="@color/colorDarkBlue"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/high_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorDarkBlue"
            android:textSize="30sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_restart"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_rounded"
            android:padding="10dp"
            android:text="@string/restart_txt"
            android:textColor="@android:color/white"
            android:textSize="30sp" />


    </LinearLayout>

</FrameLayout>